Refactored to use event base clase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name" : "com.lautaro-arino.notifyer",
-	"displayName" : "Notifyer Mesage Bus",
+	"displayName" : "Notifyer Messaging",
 	"version" : "1.0.0",
 	"author": {
     "name": "Lautaro",
